# Omni

./: .gitignore  BinaryData.cpp  BinaryData.hpp  BinaryData.lo  Capability.cpp  Capability.hpp  Capability.lo  ChangeLog  DebugOutput.cpp  DebugOutput.hpp  DebugOutput.lo  Device.cpp  Device.hpp  Device.lo  DeviceBlitter.cpp  DeviceBlitter.hpp  DeviceBlitter.lo  DeviceBooklet.cpp  DeviceBooklet.hpp  DeviceCommand.cpp  DeviceCommand.hpp  DeviceCommand.lo  DeviceConnection.cpp  DeviceConnection.hpp  DeviceConnection.lo  DeviceCopies.cpp  DeviceCopies.hpp  DeviceCopies.lo  DeviceData.cpp  DeviceData.hpp  DeviceData.lo  DeviceDither.cpp  DeviceDither.hpp  DeviceDither.lo  DeviceForm.cpp  DeviceForm.hpp  DeviceForm.lo  DeviceGamma.cpp  DeviceGamma.hpp  DeviceGamma.lo  (+166 more)
CUPS/: CUPSToOmni.cpp  GenerateOmniPPD.cpp  GenerateOmniPPDs.cpp  Makefile.am  Makefile.in  Readme.htm
DeviceCreationTool.C++/: App.cpp  CommandProperty.cpp  CommandProperty.hpp  CommandPropertyView.cpp  CommandPropertyView.hpp  CompositeNode.cpp  CompositeNode.hpp  ConnectionProperty.cpp  ConnectionProperty.hpp  ConnectionPropertyView.cpp  ConnectionPropertyView.hpp  Controller.cpp  Controller.hpp  DataProperty.cpp  DataProperty.hpp  DataPropertyView.cpp  DataPropertyView.hpp  DefaultJobProperties.cpp  DefaultJobProperties.hpp  DefaultJobPropertiesView.cpp  DefaultJobPropertiesView.hpp  DeviceToolConstants.hpp  DeviceToolSAX.cpp  DeviceToolSAX.hpp  FileSelector.hpp  FormProperty.cpp  FormProperty.hpp  FormPropertyView.cpp  FormPropertyView.hpp  GammaTableProperty.cpp  GammaTableProperty.hpp  GammaTablePropertyView.cpp  GammaTablePropertyView.hpp  GeneralProperties.cpp  GeneralProperties.hpp  GeneralPropertiesView.cpp  GeneralPropertiesView.hpp  GenericPropertyView.cpp  GenericPropertyView.hpp  GenericView.cpp  (+60 more)
DeviceFontSandBox/: ByteArray.cpp  ByteArray.hpp  CommandSequence.cpp  CommandSequence.hpp  DeviceFont.cpp  DeviceFont.hpp  DeviceFontException.cpp  DeviceFontException.hpp  DeviceFontMgr.cpp  DeviceFontMgr.hpp  Event.cpp  Event.hpp  FontParser.cpp  FontParser.hpp  INSTALL  Makefile.am  Makefile.in  Makefile.old  Panose.cpp  Panose.hpp  Parameter.cpp  Parameter.hpp  Print.cpp  README.txt  StressDeviceFontMgr.cpp  TODO.txt  TestDeviceFontMgr.cpp  UPDF Command Sequences-Sample.xml  UPDF Device Configuration-Sample.xml  UPDF Device Description-HP LaserJet 9000 PCL5e.xml  UPDF Device Description-Sample.xml  UPDFFontParser.cpp  UPDFFontParser.hpp  UTF8String.hpp  XmlFile.cpp  XmlFile.hpp  make4julie
Foomatic/: Makefile  Makefile.am  Makefile.in  OmniFoomaticGenerator.cpp  OmniFoomaticGenerator.old.1.cpp  OmniFoomaticGenerator.old.2.cpp  README  doit  omni2foo.cpp  omni2foo.hpp
JobDialog/: ComboBoxHandler.cpp  ComboBoxHandler.hpp  Driver.cpp  Driver.hpp  DriverInfo.cpp  DriverInfo.hpp  DriverProperty.cpp  DriverProperty.hpp  JobPropertyDialogController.cpp  JobPropertyDialogController.hpp  JobPropertyDialogView.cpp  JobPropertyDialogView.hpp  Makefile.am  Makefile.in  OmniGSInterface.cpp  OmniGSInterface.hpp  ReadMe  Tester.cpp  TextBoxHandler.cpp  TextBoxHandler.hpp  WidgetInterface.hpp  WidgetManager.cpp  WidgetManager.hpp
PDC/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  configure  configure.ac  pdc.h  pdc_driver.h  pdc_internal.cpp  pdc_internal.hpp  pdc_method.hpp  pdc_method_link.cpp  pdc_method_link.hpp  tester.cpp  version.mak
UPDF/: Document.xsd  DocumentDescription.xsd  DocumentProcessing.xsd  DocumentStatus.xsd  Expression.cpp  Expression.hpp  ExpressionException.cpp  ExpressionException.hpp  Job.xsd  JobDescription.xsd  JobProcessing.xsd  JobStatus.xsd  Makefile.am  Makefile.in  MediaElements.xsd  MediaWellKnownValues.xsd  ParameterConverter.cpp  ParameterConverter.hpp  ParameterConverterTester.cpp  Printer.xsd  PrinterDescription.xsd  PrinterStatus.xsd  ProcessingActual.xsd  ProcessingDefault.xsd  ProcessingReady.xsd  ProcessingSupported.xsd  PwgCommon.xsd  PwgObjects.xsd  PwgSemanticModel.xsd  PwgWellKnownValues.xsd  UPDF.xsd  UPDFCommandSequences-HPLaserJetPCL5e.xml  UPDFCommandSequences.xsd  UPDFDataTypes.xsd  UPDFDevice.cpp  UPDFDevice.hpp  UPDFDeviceBlitter.cpp  UPDFDeviceBlitter.hpp  UPDFDeviceConfiguration-HPLaserJet9000.xml  UPDFDeviceConfiguration.xsd  (+39 more)
XMLDevice/: Brother_ESC_Blitter.cpp  Brother_ESC_Instance.cpp  Brother_ESC_Instance.hpp  Brother_PCL_Blitter.cpp  Brother_PCL_Instance.cpp  Brother_PCL_Instance.hpp  Canon_BJC_8500_Blitter.cpp  Canon_BJC_8500_Instance.cpp  Canon_BJC_8500_Instance.hpp  Canon_Blitter.cpp  Canon_Blitter.hpp  Canon_Instance.cpp  Canon_Instance.hpp  Canon_S450_Blitter.cpp  Canon_S450_Instance.cpp  Canon_S450_Instance.hpp  CopyOmniDeviceBIs  CopyOmniDeviceBIs.cpp  Epson_ESCP2_Blitter.cpp  Epson_ESCP2_Instance.cpp  Epson_ESCP2_Instance.hpp  Epson_ESC_Blitter.cpp  Epson_ESC_Instance.cpp  Epson_ESC_Instance.hpp  Epson_High_Res_ESCP2_Blitter.cpp  Epson_High_Res_ESCP2_Blitter.hpp  Epson_High_Res_ESCP2_Instance.cpp  Epson_High_Res_ESCP2_Instance.hpp  Epson_PCL_Blitter.cpp  Epson_PCL_Blitter.hpp  Epson_PCL_Instance.cpp  Epson_PCL_Instance.hpp  HP_DeskJet_PCL3GUI_Blitter.cpp  HP_DeskJet_PCL3GUI_Blitter.hpp  HP_DeskJet_PCL3GUI_Instance.cpp  HP_DeskJet_PCL3GUI_Instance.hpp  HP_DeskJet_PCL3_Blitter.cpp  HP_DeskJet_PCL3_Blitter.hpp  HP_DeskJet_PCL3_Instance.cpp  HP_DeskJet_PCL3_Instance.hpp  (+109 more)
XMLParser/: BOB  Device List  DeviceInfo.hpp  Epson Copies.xml  Epson DLQ-3000+ PrintModes.xml  Epson ESCP2 Blitter.cpp  Epson ESCP2 Blitter.hpp  Epson ESCP2 Instance.cpp  Epson Generic ESC2P Commands.xml  Epson NUps.xml  Epson Orientations.xml  Epson Output Bins.xml  Epson Scalings.xml  Epson Sheet Collates.xml  Epson Sides.xml  Epson Stitchings.xml  Epson Strings.xml  Epson Stylus 200 Medias.xml  Epson Stylus 200 Trays.xml  Epson Stylus Color 660 Connections.xml  Epson Stylus Color 660 Forms.xml  Epson Stylus Color 660 Resolutions.xml  Epson Stylus Color 760 Data.xml  Epson Stylus Color 760 Gammas.xml  Epson Stylus Color 760.xml  Epson Stylus Color 760.xml.bad  Epson Trimmings.xml  Main.cpp  Makefile  Makefile.am  Makefile.in  OmniDomParser.cpp  OmniDomParser.hpp  createEpsonTest  (+1 more)
(+1580 files in other folders)
